# PG

./: .gitignore  README.md
BASIC/: Dockerfile  README.md
BASIC/project/demo/: build.sh  demo  demo.bas
c/: Dockerfile  README.md
c/project/demo/: algo.c  bitwise.c  bitwise.h  linklist.c  linklist.h  main.c  makefile  stringedit.c  stringedit.h  test.c
cpp/: README.md
cpp/project/: makefile
cpp/project/demo/: hello_word.cpp  makefile
cuda/: Dockerfile  README.md
cuda/project/cuda-samples/p2ptest/: CMakeLists.txt  p2ptest.cu
python/: README.md
python/project/demo/: 1. Two Sum.md  11. Container With Most Water.md  121. Best Time to Buy and Sell Stock.md  141. Linked List Cycle.md  15. 3Sum.md  169. Majority Element.md  20. Valid Parentheses.md  206. Reverse Linked List.md  21. Merge Two Sorted Lists.md  217. Contains Duplicate.md  232. Implement Queue using Stacks.md  234. Palindrome Linked List.md  238. Product of Array Except Self.md  283. Move Zeroes.md  39. Combination Sum.md  56. Merge Intervals.md  57. Insert Interval.md  75. Sort Colors.md  844. Backspace String Compare.md  876. Middle of the Linked List.md  977. Squares of a Sorted Array.md  README.md  test.py
rust/: Dockerfile  README.md
rust/project/algo/: Cargo.toml
rust/project/demo/: Cargo.toml
verilog/: Dockerfile  README.md
verilog/project/demo/: Dockerfile  README.md  adder.v  adder_tb.v  adder_tb.vcd  and_or.v  blockingVSnonblocking.v  define.v  hello.v  logic.v  mean.v  mean_tb  mean_tb.v  mean_tb.vcd  tb.v  tb.vcd  testbench.v
verilog/project/risc-v_cluster/: Dockerfile  (+2 more)
(+2 files in other folders)
